--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -11,7 +11,14 @@
     tools:context="com.tomcat.simple.bluetooth_le2015.MainActivity">
 
     <TextView
+        android:layout_width="fill_parent"
+        android:layout_height="wrap_content"
+        android:text="Hello World!"
+        android:id="@+id/guiDeviceInfo" android:layout_alignParentBottom="true"
+        android:layout_alignParentEnd="true"/>
+    <ListView
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:text="Hello World!"/>
+        android:id="@+id/listView" android:layout_alignParentTop="true"
+        android:layout_alignParentStart="true" android:layout_above="@+id/guiDeviceInfo"/>
 </RelativeLayout>
